--- a/4-calculadora.html
+++ b/4-calculadora.html
@@ -72,8 +72,10 @@
                     items-center sm:items-stretch
                     gap-2
                 `}>
-                    <Calculator />
-                    <OperationHistory />
+                    <CalculatorProvider>
+                        <Calculator />
+                        <OperationHistory />
+                    </CalculatorProvider>
 
                 </main>
             )
@@ -139,7 +141,7 @@
                 { input: '1' },
                 { input: '2' },
                 { input: '3' },
-                { input: '+', variant: 'primary'}
+                { input: '+', variant: 'primary' }
             ],
             [
                 { input: '0', className: 'flex-1 h-16' },
@@ -147,6 +149,93 @@
                 { input: '=', variant: 'primary', className: 'w-16 h-16 bg-[#7F45E2]' }
             ]
         ]
+
+        const CalculatorContext = React.createContext()
+
+        function CalculatorProvider({ children }) {
+            const [history, setHistory] = React.useState([])
+            const historyStorageKey = 'history'
+
+            React.useEffect(() => {
+                const savedHistory = localStorage.getItem(historyStorageKey)
+                setHistory(JSON.parse(savedHistory || '[]'))
+            }, [])
+
+            function updateHistory(operation, parsedResult) {
+                setHistory((prev) => {
+                    const updatedHistory = [
+                        ...prev,
+                        `${operation}=${parsedResult}`
+                    ]
+
+                    localStorage.setItem(
+                        historyStorageKey,
+                        JSON.stringify(updatedHistory)
+                    )
+                    return updatedHistory
+                })
+            }
+
+            return (
+                <CalculatorContext.Provider
+                    value={{ history, updateHistory }}
+                >
+                    {children}
+                </CalculatorContext.Provider>
+            )
+        }
+
+        function useCalculator() {
+            const [operation, setOperation] = React.useState('')
+            const [result, setResult] = React.useState('')
+
+            const { updateHistory } = React.useContext(CalculatorContext)
+
+            function doOperation(input) {
+
+                if (input === 'C') {
+                    setOperation('')
+                    setResult('')
+                    return
+                }
+
+                if (input === 'CE') {
+                    setResult('')
+                    setOperation(operation.slice(0, -1))
+                    return
+                }
+
+                if (input === '=') {
+                    const operationResult = eval(operation.replace(/,/g, '.'))
+                    const parsedResult = operationResult.toString()?.replace(/\./g, ',')
+                    setResult(parsedResult)
+                    updateHistory(operation, parsedResult)
+                    return
+                }
+
+                if (result) {
+                    setOperation(isNaN(input)
+                        ? `${result}${input}`
+                        : input)
+                    setResult('')
+                    return
+                }
+
+                if (input === ',' && !operation.endsWith(',')) {
+                    setOperation(`${operation},`)
+                    return
+                }
+
+                setOperation(`${operation}${input}`)
+
+            }
+
+            return {
+                operation,
+                result,
+                doOperation,
+            }
+        }
 
         function CalculatorDisplay({ operation, result }) {
             return (
@@ -171,44 +260,10 @@
         }
 
         function Calculator() {
-            const [operation, setOperation] = React.useState('')
-            const [result, setResult] = React.useState('')
+            const { operation, result, doOperation } = useCalculator()
 
-            function handleInputClick(input){
-
-                if (input === 'C') {
-                    setOperation('')
-                    setResult('')
-                    return
-                }
-
-                if (input === 'CE') {
-                    setResult('')
-                    setOperation(operation.slice(0, -1))
-                    return
-                }
-
-                if (input === '=') {
-                    const operationResult = eval(operation.replace(/,/g, '.'))
-                    const parsedResult = operationResult.toString()?.replace(/\./g, ',')
-                    setResult(parsedResult)
-                    return
-                }
-
-                if (result) {
-                    setOperation(isNaN(input) 
-                        ? `${result}${input}`
-                        : input)
-                    setResult('')
-                    return
-                }
-
-                if (input === ',' && !operation.endsWith(',')) {
-                    setOperation(`${operation},`)
-                    return
-                }
-
-                setOperation(`${operation}${input}`)
+            function handleInputClick(input) {
+                doOperation(input)
             }
 
             return (
@@ -216,8 +271,8 @@
                     flex flex-col gap-[1.625rem] w-[22.25rem]
                     pt-14 px-8 pb-8
                 `}>
-                    <CalculatorDisplay 
-                        operation={operation} 
+                    <CalculatorDisplay
+                        operation={operation}
                         result={result}
                     />
 
@@ -225,8 +280,8 @@
                         {buttons.map((row, index) => (
                             <div key={`row-${index}`} className='flex gap-3'>
                                 {row.map(button => (
-                                    <Button 
-                                        key={button.input} 
+                                    <Button
+                                        key={button.input}
                                         className={button.className || 'w-16 h-16'}
                                         variant={button.variant}
                                         onClick={() => handleInputClick(button.input)}
@@ -236,28 +291,40 @@
                                 ))}
                             </div>
                         ))}
-                        
-                                
                     </div>
                 </Card>
             )
         }
 
-        function OperationHistory(){
-            return(
+        function OperationHistory() {
+
+            const { history } = React.useContext(CalculatorContext)
+
+            return (
                 <Card className='py-10 px-8 w-full'>
-                    <Text 
+                    <Text
                         as='h1'
                         variant='heading'
                         className='mb-4'
                     >
                         Histórico de Operações
                     </Text>
-                    <ul className='flex flex-col gap-3'>
-                        <Text as='li'> 1 + 1 = 2 </Text>
-                        <Text as='li'> 2 + 3 + 1 = 6 </Text>
-                        <Text as='li'> 2 + 3 = 5 </Text>    
-                    </ul>
+
+                    {history.length > 0 ?
+                        (
+                            <ul className='flex flex-col gap-3'>
+                                {history.map((value, index) => (
+                                    <Text
+                                        key={`item-${index}`}
+                                        as='li'>
+                                        {value}
+                                    </Text>
+                                ))}
+                            </ul>
+                        ) : (
+                            <Text as='p' variant='muted'>Ops! Parece que nenhuma operação recente foi encontrada!</Text>
+                        )
+                    }
                 </Card>
             )
         }
@@ -265,4 +332,5 @@
         ReactDOM.createRoot(document.getElementById('root')).render(<App />)
     </script>
 </body>
+
 </html>
